// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Content /> should render component with props 1`] = `
<div>
  <div
    className="ts card text container"
  >
    <div
      className="image"
    >
      <FadeOutImage
        placeholder="https://placehold.it/20x20"
        url="https://placehold.it/200x200"
      />
    </div>
    <div
      className="content"
    >
      <div
        className="header"
      >
        title
      </div>
      <div
        className="bulleted meta"
      >
        John Doe (johndoe@anonymous.org)
      </div>
      <div
        className="description"
      >
        description
      </div>
    </div>
  </div>
</div>
`;

exports[`<Content /> should render initial component 1`] = `
<div>
  <div
    className="ts card text container"
  >
    <div
      className="image"
    >
      <FadeOutImage
        placeholder=""
        url=""
      />
    </div>
    <div
      className="content"
    >
      <div
        className="header"
      />
      <div
        className="bulleted meta"
      >
         ()
      </div>
      <div
        className="description"
      />
    </div>
  </div>
</div>
`;
